--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         font-color: black;
       }
     </style>
-    <script src="http://d3js.org/d3.v3.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.js"></script>
     <script>
       function plotgrid(width_in, height_in,
                         seconds_between_samples,
